fix - card quote padding on mobile

--- a/src/scss/framework/components/_cards.scss
+++ b/src/scss/framework/components/_cards.scss
@@ -130,8 +130,8 @@
 .card-quote {
   width: min(90%, 500px);
   position: relative;
-  padding: clamp(calc($spacer * 3), 3%, calc($spacer * 5))
-    clamp(calc($spacer * 3), 3%, calc($spacer * 5))
+  padding: clamp(calc($spacer * 2), 3%, calc($spacer * 5))
+    clamp(calc($spacer * 2), 3%, calc($spacer * 5))
     clamp(calc($spacer * 2.5), 3%, calc($spacer * 5.5));
   margin: 0 auto;
   @media screen and (min-width: 500px) {
